--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "firebase": "^9.17.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "marked": "^16.4.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.1",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
